@@ -1,3 +1,5 @@
+- support pickling
+
 0.3.5
 - fixed Money stringification with non-ascii currency symbol
 
